--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div id="menu"></div>
+    <div id="nobel"></div>
     <script src="menu.js"></script>
     <script src="alap.js"></script>
 </body>
