--- a/index.html
+++ b/index.html
@@ -12,6 +12,35 @@
 <body>
     <div id="menu"></div>
     <div id="nobel"></div>
+
+<!-- The Modal -->
+<div class="modal" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+  
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title" id="modalfej"></h4>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+  
+        <!-- Modal body -->
+        <div id="modaltorzs" class="modal-body">
+          
+        </div>
+  
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Bezár</button>
+        </div>
+  
+      </div>
+    </div>
+  </div>
+
+
+
+
     <script src="menu.js"></script>
     <script src="alap.js"></script>
 </body>
