Név keres fél kész

--- a/Nevkeres.html
+++ b/Nevkeres.html
@@ -12,13 +12,13 @@
 <body>
     <div id="menu"></div>
     <div class="baligazit">
-        <p>Add meg az évet:</p>
-    <input type="text" id="beev">
-    <button onclick="kereses()">Kereses</button>
+        <p>Add meg egy nevet:</p>
+    <input type="text" id="benev">
+    <button onclick="keresesnev()">Kereses</button>
     </div>
     <div id="kiadat"></div>
 
     <script src="menu.js"></script>
-    <script src="evkeres.js"></script>
+    <script src="nevkeres.js"></script>
 </body>
 </html>
