Név keresés kész

--- a/Nevkeres.html
+++ b/Nevkeres.html
@@ -16,7 +16,7 @@
     <input type="text" id="benev">
     <button onclick="keresesnev()">Kereses</button>
     </div>
-    <div id="kiadat"></div>
+    <div id="tablazat"></div>
 
     <script src="menu.js"></script>
     <script src="nevkeres.js"></script>
