evkeres lenyilo megoldás

--- a/evkeres.html
+++ b/evkeres.html
@@ -13,7 +13,7 @@
     <div id="menu"></div>
     <div class="baligazit">
         <p>Add meg az évet:</p>
-    <input type="text" id="beev">
+    <select name="" id="beev"></select>
     <button onclick="kereses()">Kereses</button>
     </div>
     <div id="kiadat"></div>
